# sniptext

./: .gitignore  KEYBINDINGS.md  LANGUAGES.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  quick-ocr.sh  requirements.txt  sniptext.desktop  sniptext.service
sniptext/: __init__.py  __main__.py  analyzer.py  capture.py  clipboard.py  confidence.py  config.py  corrector.py  ensemble.py  hotkey.py  ocr.py  postprocess.py
tests/: test_basic.py  test_corrector.py
