[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sniptext"
version = "0.1.0"
description = "Screen capture OCR tool with adaptive ensemble recognition"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "dkorbelainen", email = "officialpand@gmail.com"}
]
keywords = ["ocr", "screenshot", "tesseract", "easyocr", "linux", "wayland"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Text Processing",
]

dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "scikit-learn>=1.3.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
easyocr = [
    "easyocr>=1.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/dkorbelainen/sniptext"
Repository = "https://github.com/dkorbelainen/sniptext"
Issues = "https://github.com/dkorbelainen/sniptext/issues"

[project.scripts]
sniptext = "sniptext.__main__:main"

[tool.setuptools]
packages = ["sniptext"]

[tool.setuptools.package-data]
sniptext = ["py.typed"]
